# glycan-biomarkers

./: .gitignore  README.md  config.json  processing_example.ipynb  pyproject.toml  reflection.md  requirements.txt
data/glycan_embedding/: N_glycans_df.csv  N_glycans_df.pkl  df_species.pkl
docs/: project_outline.md  report.md
models/: SweetNet_animalia.pt  SweetNet_diseases.pt  SweetNet_glycan_type.pt  SweetNet_species_10.pt
models/sweetnet/: Sweetnet_Family.pt
notebooks/: data_processing.ipynb  data_processing_&_classification.ipynb  eda.ipynb  embed_helpers.py  embeds.ipynb  exploratory_data_analysis.ipynb  glycan_embedding.ipynb
notebooks/task_1/: 0_exploratory_data_analysis.ipynb  1_discriminatory_analysis.ipynb
notebooks/task_2/: embeddings_analysis.ipynb
scripts/: classification.py  data_processing.py
src/: batch_corrector.py  model_training.py  processing_helpers.py  processing_pipeline.py
src/Task_1/data_processing/: classification.py
src/Task_2/: glycan_embedding.ipynb
src/data_processing/: data_processing.ipynb  data_processing.py  data_processing_&_classification.ipynb
src/eda/: eda.ipynb
src/notebooks/: glycowork.ipynb  instructions.ipynb
src/task_1/: batch_corrector.py  model_training.py  processing_helpers.py  processing_pipeline.py
src/task_2/: datasets.py  graphCNN_training.py  helpers.py  inference.py  llm_training.py  loading_helpers.py  plots_helpers.py  tokenizer.py
utils/: config.py  logger.py
