[project]
name = "ml-internships"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "glycowork>=1.4.0",
    "nbdev>=2.3.34",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "ipykernel>=6.29.5",
    "isort>=5.13.2",
    "pydocstyle>=6.3.0",
    "pylint>=3.3.2",
]
